# domible

./: .buildinfo  .gitignore  .readthedocs.yml  404.html  CHANGELOG.html  CHANGELOG.md  CONDUCT.html  LICENSE  README.md  about.html  genindex.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  rpt.py  search.html  searchindex.js  sitemap.xml
.doctrees/: CHANGELOG.doctree  CONDUCT.doctree  about.doctree  environment.pickle  index.doctree
.github/workflows/: ci-cd.yml  ci_mkdocs.yml  sphinx.yml
CHANGELOG/: index.html
CONDUCT/: index.html
CONTRIBUTING/: index.html
_sources/: CONDUCT.md.txt  index.md.txt
docs/: CHANGELOG.md  CONTRIBUTING.md  Makefile  about.md  conf.py  example.ipynb  index.md  make.bat  requirements.txt
search/: search_index.json
src/dicli/: __init__.py  __main__.py  dicli.py  main.py  mdnElements.py
src/distarter/: __init__.py  __main__.py  main.py
src/domible/: __init__.py  tools.py  utils.py
src/domible/builders/: __init__.py  elementFromObject.py  formBuilder.py  listBuilder.py  navBuilder.py  navigation.py  preformatted.py  tableBuilder.py
src/domible/elements/: __init__.py  baseElements.py  forms.py  inline.py  lists.py  meta.py  roots.py  scripting.py  sectioning.py  tables.py
src/domible/scripts/: __init__.py
src/domible/scripts/dibrowse/: __init__.py  main.py
src/domible/scripts/dicli/: __init__.py  main.py
src/domible/starterDocuments/: __init__.py  barebones.py  basicDocuments.py
tests/: __init__.py  details.py  efo.py  test_anchor.py  test_domible.py  test_domible_utils.py  utils.py
