[tool.poetry]
name = "domible"
version = "0.1.13"
description = "python classes to create accessible HTML elements and documents "
authors = ["Joel Dodson <joeldodson@gmail.com>"]
maintainers = ["BlindGumption <blindgumption@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://joeldodson.github.io/domible"
documentation = "https://joeldodson.github.io/domible"
repository = "https://github.com/joeldodson/domible"
keywords = [
    "html",
    "accessibility",
    "a11y",
    "web development",
    "frontend",
    "server side rendering",
    "SSR",
]
packages = [
    { include = "domible", from = "src" },
    { include = "dicli", from = "src" },
    { include = "distarter", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = { version = "^4.12.3", optional = true }
jsonloggeriso8601datetime = { version = "^1.0.5", optional = true }
requests = { version = "^2.32.3", optional = true }
validators = "^0.28.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
beautifulsoup4 = "^4.12.3"
jsonloggeriso8601datetime = "^1.0.5"
pytest-reportlog = "^0.3.0"
ruff = "^0.5.5"
requests = "^2.32.3"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.30"

[tool.poetry.extras]
dicli = ["beautifulsoup4", "jsonloggeriso8601datetime", "requests"]

[tool.poetry.scripts]
distarter = "distarter:run"
dicli = { callable = "dicli:run", extras = ["dicli"] }

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# see:  https://docs.pytest.org/en/stable/reference/reference.html#ini-options-ref for list of configuration options 
# search through level 2 headings to find Configuration
addopts = "-q --no-header --tb=line"
testpaths = ["tests"]
log_auto_indent = 4
log_cli = false
log_cli_level = 40
log_cli_format = "%(levelname)s -- %(message)s -- %(filename)s:%(funcName)s:%(lineno)d"
log_file = "logs/pytest.log"
log_file_level = 20
log_file_format = "%(asctime)s(%(msecs)d) -- %(levelname)s -- %(message)s -- %(filename)s:%(funcName)s:%(lineno)d"
log_file_date_format = "%Y-%m-%dT%H:%M:%S%z"


## end of file
