## see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "domible"
version = "0.1.17"
description = "python classes to create accessible HTML elements and documents "
authors = [
    {name = "Joel Dodson",email = "joeldodson@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "validators (>=0.34.0)"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Text Processing :: Markup :: HTML",
]

keywords = [
    "html",
    "accessibility",
    "a11y",
    "web development",
    "frontend",
    "server side rendering",
    "SSR",
    "hydrate",
]

[project.urls]
homepage = "https://joeldodson.github.io/domible"
documentation = "https://joeldodson.github.io/domible"
repository = "https://github.com/joeldodson/domible"
issues = "https://github.com/joeldodson/domible/issues"

[project.scripts]
dicli = "domible.scripts.dicli.main:run"

[tool.poetry]

packages = [
    { include = "domible", from = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# see:  https://docs.pytest.org/en/stable/reference/reference.html#ini-options-ref for list of configuration options 
# search through level 2 headings to find Configuration
addopts = "-q --no-header --tb=line"
testpaths = ["tests"]
log_auto_indent = 4
log_cli = false
log_cli_level = 40
log_cli_format = "%(levelname)s -- %(message)s -- %(filename)s:%(funcName)s:%(lineno)d"
log_file = "logs/pytest.log"
log_file_level = 20
log_file_format = "%(asctime)s(%(msecs)d) -- %(levelname)s -- %(message)s -- %(filename)s:%(funcName)s:%(lineno)d"
log_file_date_format = "%Y-%m-%dT%H:%M:%S%z"


## end of file
